feat: remove command domain
